# trend-speculative-orb

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py
configs/: config.py
docs/rfcs/: 001-architecture.md
services/: orchestrator.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_core.py  test_runtime.py
